--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "node --test tests/*.test.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
@@ -13,6 +14,7 @@
     "csv-parse": "^6.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "googleapis": "^128.0.0"
+    "googleapis": "^128.0.0",
+    "pdfkit": "^0.17.2"
   }
 }
